--- a/install-k8s/tasks/install.yml
+++ b/install-k8s/tasks/install.yml
@@ -1,5 +1,16 @@
-- name: instalando o docker
-  shell: apt install curl -y && curl -fsSL https://get.docker.com | bash 
+#- name: instalando o docker
+#  shell: apt install curl -y && curl -fsSL https://get.docker.com | bash 
+
+
+- name: configurando repo para o docker
+  shell:
+    echo \
+    "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
+    $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+
+- name: instalando docker versao especifica
+  shell: apt install docker-ce=18.03.1~ce~3-0~ubuntu docker-ce-cli=18.03.1~ce~3-0~ubuntu containerd.io -y 
+    
 
 - name: disable ufw
   systemd:
