--- a/install-k8s/tasks/install.yml
+++ b/install-k8s/tasks/install.yml
@@ -9,7 +9,7 @@
     $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
 
 - name: instalando docker versao especifica
-  shell: apt install docker-ce=18.03.1~ce~3-0~ubuntu docker-ce-cli=18.03.1~ce~3-0~ubuntu containerd.io -y 
+  shell: apt install docker-ce=18.03.1~ce~3-0~ubuntu  containerd.io -y 
     
 
 - name: disable ufw
