--- a/install-k8s/tasks/main.yml
+++ b/install-k8s/tasks/main.yml
@@ -1,10 +1,8 @@
----
-# tasks file for install-k8s
 
-- include_tasks: setup-redhat.yml
+- include: setup-redhat.yml
   when: ansible_os_family == 'RedHat'
 
-- include_tasks: setup-debian.yml
+- include: setup-debian.yml
   when: ansible_os_family == 'Debian'
 
 - name: Install Docker.
@@ -22,8 +20,8 @@
 - name: Ensure handlers are notified now to avoid firewall conflicts.
   meta: flush_handlers
 
-- include_tasks: docker-compose.yml
+- include: docker-compose.yml
   when: docker_install_compose | bool
 
-- include_tasks: docker-users.yml
+- include: docker-users.yml
   when: docker_users | length > 0
