--- a/install-k8s/tasks/setup-redhat.yml
+++ b/install-k8s/tasks/setup-redhat.yml
@@ -6,6 +6,13 @@
       - docker-engine
     state: absent
 
+
+- name: instalando dependencias - CentOS
+  yum:
+    name: ['yum-utils', 'device-mapper-persistent-data', 'lvm2']
+    state: present
+    update_cache: true    
+
 - name: Add Docker GPG key.
   rpm_key:
     key: "{{ docker_yum_gpg_key }}"
@@ -47,3 +54,57 @@
         name: containerd.io
         state: present
   when: ansible_distribution_major_version | int == 8
+
+
+
+
+- name: disabilita SELinux - CentOS
+  command: setenforce 0
+- name: disabilita SELinux on reboot - CentOS
+  selinux:
+    state: disabled
+- name: add repositorio YUM Kubernetes - CentOS
+  yum_repository:
+   name: Kubernetes
+   description: Kubernetes YUM repository
+   baseurl: https://packages.cloud.google.com/yum/repos/kubernetes-el7-x86_64
+   gpgkey: https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+   gpgcheck: yes
+- name: criando a pasta docker no systemd
+  file:
+    path: /etc/systemd/system/docker.service.d
+    state: directory
+    mode: 0755
+- name: desativando swap
+  shell:
+    swapoff -a
+
+- name: Desativando swap no fstab
+  replace:
+    path: /etc/fstab
+    regexp: '^([^#].*?\sswap\s+sw\s+.*)$'
+    replace: '# \1' 
+
+- name: garantindo que net.bridge.bridge-nf-call-ip6tables esteja setada como 1
+  sysctl:
+   name: net.bridge.bridge-nf-call-ip6tables
+   value: 1
+   state: present
+  
+- name: grantindo net.bridge.bridge-nf-call-iptables esteja setada como 1
+  sysctl:
+   name: net.bridge.bridge-nf-call-iptables
+   value: 1
+   state: present
+
+- name: instalando kubelet kubeadm kubectl
+  yum: 
+   name: ['kubelet', 'kubeadm', 'kubectl']
+   state: present
+   update_cache: true   
+
+- name: start kubelet
+  systemd:
+   name: kubelet
+   enabled: yes
+   state: started
