--- a/ansible.cfg
+++ b/ansible.cfg
@@ -44,3 +44,4 @@ retries                 = 3
 
 command_warning         = false
 callback_whitelist      = profile_tasks
+ansible_python_interpreter = /usr/bin/python3
