--- a/install-k8s/tasks/main.yml
+++ b/install-k8s/tasks/main.yml
@@ -20,8 +20,8 @@
 - name: Ensure handlers are notified now to avoid firewall conflicts.
   meta: flush_handlers
 
-- include: docker-compose.yml
-  when: docker_install_compose | bool
+  #- include: docker-compose.yml
+  # when: docker_install_compose | bool
 
 - include: docker-users.yml
   when: docker_users | length > 0
