--- a/create-lab/tasks/set-hosts.yml
+++ b/create-lab/tasks/set-hosts.yml
@@ -13,3 +13,18 @@
   when: hostvars[item]['ansible_facts']['default_ipv4'] is defined
   with_items:
     - "{{ groups['all'] }}"
+
+- name: install needed network manager libs
+  yum: name={{ item }} state=installed
+  with_items:
+  - NetworkManager-glib
+  - libnm-qt-devel.x86_64
+  - nm-connection-editor.x86_64
+  - libsemanage-python
+  -  policycoreutils-python
+
+- name: Get the host IP
+  shell: host {{ ansible_fqdn }} | awk '{print $NF}' ; test ${PIPESTATUS[0]} -eq 0 
+  register: host_sh
+- debug: msg="{{ host_sh.stdout }}"
+
