--- a/create-lab/tasks/set-hosts.yml
+++ b/create-lab/tasks/set-hosts.yml
@@ -15,6 +15,18 @@
   with_items:
     - "{{ groups['all'] }}"
 
+- name: install bind-utils
+  yum: name=bind-utils state=installed
+
+- name: install needed network manager libs
+    yum: name={{ item }} state=installed
+    with_items:
+    - NetworkManager-glib
+    - libnm-qt-devel.x86_64
+    - nm-connection-editor.x86_64
+    - libsemanage-python
+    - policycoreutils-python
+
 
 
 - name: Get the host IP
