--- a/install-k8s/tasks/install-rhel.yml
+++ b/install-k8s/tasks/install-rhel.yml
@@ -1,3 +1,14 @@
+- name: Ensure old versions of Docker are not installed.
+  package:
+    name:
+      - docker
+      - docker-common
+      - docker-engine
+    state: absent
+
+
+
+
 
 - name: instalando dependencias - CentOS
   yum:
