--- a/create-lab/tasks/install.yml
+++ b/create-lab/tasks/install.yml
@@ -5,9 +5,9 @@
     state: present
     update_cache: true
 
-- name: disabilita SELinux - CentOS
+- name: desabilita SELinux - CentOS
   command: setenforce 0
-- name: disabilita SELinux on reboot - CentOS
+- name: desabilita SELinux on reboot - CentOS
   selinux:
     state: disabled
  
