--- a/install-k8s/tasks/setup-redhat.yml
+++ b/install-k8s/tasks/setup-redhat.yml
@@ -58,9 +58,9 @@
 
 
 
-- name: disabilita SELinux - CentOS
+- name: desabilita SELinux - CentOS
   command: setenforce 0
-- name: disabilita SELinux on reboot - CentOS
+- name: desabilita SELinux on reboot - CentOS
   selinux:
     state: disabled
 - name: add repositorio YUM Kubernetes - CentOS
