--- a/install-k8s/defaults/main.yml
+++ b/install-k8s/defaults/main.yml
@@ -31,3 +31,16 @@ docker_yum_gpg_key: "{{ docker_repo_url }}/centos/gpg"
 
 # A list of users who will be added to the docker group.
 docker_users: []
+
+
+---
+# Package options.
+containerd_package: containerd.io
+containerd_package_state: present
+
+# Service options.
+containerd_service_state: started
+containerd_service_enabled: true
+
+# Write a default containerd config.toml file.
+containerd_config_default_write: true
