--- a/install-k8s/tasks/main.yml
+++ b/install-k8s/tasks/main.yml
@@ -1,3 +1,8 @@
 
 - include: install-rhel.yml
   when: ansible_os_family == 'RedHat'
+
+
+- include: install-debian.yml
+  when: ansible_os_family == 'Debian'
+
