--- a/install-k8s/handlers/main.yml
+++ b/install-k8s/handlers/main.yml
@@ -1,3 +1,9 @@
 ---
 - name: restart docker
   service: "name=docker state={{ docker_restart_handler_state }}"
+
+
+- name: restart containerd
+  service:
+    name: containerd
+    state: restarted
