--- a/create-cluster/tasks/main.yml
+++ b/create-cluster/tasks/main.yml
@@ -1,3 +1,10 @@
 ---
 # tasks file for create-cluster
+
 - include: init-cluster.yml
+  when: ansible_os_family == 'RedHat'
+
+- include: init-cluster-calico.yml
+  when: ansible_os_family == 'Debian'
+
+
