--- a/create-cluster/vars/main.yml
+++ b/create-cluster/vars/main.yml
@@ -1,4 +1,4 @@
 ---
 # vars file for create-cluster
 default_url_weavenet: "https://cloud.weave.works/k8s/net?k8s-version=$(kubectl version | base64 | tr -d '\n')"
-
+default_url_calico: "https://docs.projectcalico.org/manifests/calico.yaml"
